--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,8 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", serif;
 }
+
+main {
+  background: #f7f9fb;
+}
 /*# sourceMappingURL=App.css.map */
