hero section finished and description added

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,4 +10,4 @@ h1, h2, h3, h4, h5, h6 {
 main {
   background: #f7f9fb;
 }
-/*# sourceMappingURL=App.css.map */
+/*# sourceMappingURL=App.module.css.map */
