--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -34,7 +34,7 @@ h2 {
     color: $accent-yellow-color-dark;
 }
 
-ul .active-link {
+ul .active {
     color: $accent-yellow-color-dark;
     text-decoration: underline;
 }
