--- a/src/shared/css/general.scss
+++ b/src/shared/css/general.scss
@@ -10,7 +10,8 @@ $accent-yellow-color-dark: #e8ba02;
 
 $logo-font-size: 1.6rem;
 $menu-font-size: 1.1rem;
-$hero-title-size: 4rem;
+$hero-title-size: 4.3rem;
+$body-font-size-small: 2rem;
 
 @mixin menu-flex {
     display: flex;
