--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -75,4 +75,4 @@
 .form-wrapper form p a {
   color: #F9C807;
 }
-/*# sourceMappingURL=Register.module.css.map */
+/*# sourceMappingURL=Login.module.css.map */
