create post added

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -34,7 +34,7 @@ span.yellow-accent {
         width: 90%;
         text-align: center;
         margin: 0 auto;
-        font-size: $body-font-size-small;
+        font-size: $body-font-size-large;
 
         a{
             color: $accent-yellow-color-light;
