--- a/src/components/CreatePost/CreatePost.module.css
+++ b/src/components/CreatePost/CreatePost.module.css
@@ -101,4 +101,28 @@
 .form-wrapper button.post-form-button {
   font-size: 1.3rem;
 }
+
+.confirmation-msg {
+  background: #EAF0FC;
+  font-size: 2rem;
+  font-family: "Noto Sans KR", sans-serif;
+  color: #252e48;
+  padding: 1%;
+  position: absolute;
+  -webkit-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+  opacity: 1;
+}
+
+.hide-msg {
+  background: #EAF0FC;
+  font-size: 2rem;
+  font-family: "Noto Sans KR", sans-serif;
+  color: #252e48;
+  padding: 1%;
+  position: absolute;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+  opacity: 0;
+}
 /*# sourceMappingURL=CreatePost.module.css.map */
