--- a/src/components/CreatePost/CreatePost.module.scss
+++ b/src/components/CreatePost/CreatePost.module.scss
@@ -3,3 +3,25 @@
 .form-wrapper {
     @include post-form;
 }
+
+.confirmation-msg{
+        background: $base-color-dark;
+        font-size: $body-font-size-large;
+        font-family: $body-font;
+        color: $accent-blue-color;
+        padding: 1%;
+        position: absolute;
+        transition: opacity 0.6s;
+        opacity: 1;
+}
+
+.hide-msg{
+    background: $base-color-dark;
+    font-size: $body-font-size-large;
+    font-family: $body-font;
+    color: $accent-blue-color;
+    padding: 1%;
+    position: absolute;
+    transition: opacity 1s;
+    opacity: 0;
+}
