--- a/src/shared/css/general.scss
+++ b/src/shared/css/general.scss
@@ -12,6 +12,8 @@ $logo-font-size: 2rem;
 $menu-font-size: 1.3rem;
 $hero-title-size: 4.3rem;
 $body-font-size-large: 2rem;
+$post-heading-font-size: 3.2rem;
+$post-body-font-size: 1.1rem;
 
 @mixin menu-flex {
     display: flex;
