--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,11 +2,12 @@
 .footer {
   background: #f7f9fb;
   padding: 20px;
-  border-top: 1px solid #EAF0FC;
+  border-top: 2px solid #EAF0FC;
 }
 
 .footer h5 {
   text-align: center;
   font-size: 0.9rem;
+  color: #696363;
 }
 /*# sourceMappingURL=Footer.module.css.map */
