--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,10 +3,11 @@
 .footer {
     background: $base-color-light;
     padding: 20px;
-    border-top: 1px solid $base-color-dark;
+    border-top: 2px solid $base-color-dark;
 
     h5 {
         text-align: center;
         font-size: 0.9rem;
+        color: rgb(105, 99, 99);
     }
 }
