--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Playfair+Display:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;500;600;700&display=swap');
+
 body, *, ::before, ::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 code {
@@ -16,4 +20,8 @@ ul li{
 a {
   text-decoration: none;
   color: #000;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Ibarra Real Nova', serif;
 }
