--- a/src/components/Details/Details.module.scss
+++ b/src/components/Details/Details.module.scss
@@ -3,6 +3,7 @@
 .post-section {
     font-size:$post-body-font-size;
     width: 85%;
+    min-height: 90vh;
     margin: 20px auto;
     text-align: center;
     background: $base-color-dark;
