--- a/src/shared/css/general.scss
+++ b/src/shared/css/general.scss
@@ -47,7 +47,7 @@ $post-body-font-size: 1.1rem;
 
         p.error {
             position: absolute;
-            bottom: -11;
+            bottom: -11px;
             color: rgb(237, 48, 48);
             font-size: 1rem;
         }
