my profile page started

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -32,6 +32,7 @@ span.yellow-accent {
   width: 100%;
   background: #EAF0FC;
   padding: 5% 0 5% 0;
+  margin-bottom: 180px;
 }
 
 .description-section p {
