user's posts page finished

--- a/src/components/Details/Details.module.scss
+++ b/src/components/Details/Details.module.scss
@@ -30,35 +30,8 @@
             }
         }
         .owner-action-section {
-            position: relative;
-
-            .action-link {
-                margin: 0 10px;
-                border: 1px solid;
-                padding: 10px 20px;
-                border-radius: 8px;
-            }
-
-            .action-link:nth-child(1){
-                color: rgb(14, 138, 14);
-                transition: 0.3s;
-            }
+            @include editDeleteBtns;
             
-            .action-link:nth-child(1):hover{
-                background: rgb(14, 138, 14);
-                color: #fff;
-            }
-
-            .action-link:nth-child(2){
-                color: rgb(236, 47, 47);
-                transition: 0.3s;
-            }
-            
-            .action-link:nth-child(2):hover{
-                background: rgb(236, 47, 47);
-                color: #fff;
-            }
-
             .confirmSection {
                 position: absolute;
                 top: -105px;
