--- a/src/components/MyProfile/MyProfile.module.css
+++ b/src/components/MyProfile/MyProfile.module.css
@@ -18,6 +18,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border-bottom: 2px solid #e8ba02;
+  padding-bottom: 10px;
 }
 
 .page-wrapper header .user-info-section {
@@ -30,15 +32,41 @@
 }
 
 .page-wrapper header .user-info-section .img-wrapper {
+  margin-right: 10px;
   border: 2px solid #e8ba02;
   border-radius: 50%;
-  width: 94px;
-  height: 94px;
+  width: 77px;
+  height: 77px;
   position: relative;
 }
 
 .page-wrapper header .user-info-section .img-wrapper svg {
   position: absolute;
-  left: 10px;
+  left: 9px;
+}
+
+.page-wrapper header .buttons-section button {
+  border: 2px solid #e8ba02;
+  padding: 10px 90px;
+  border-radius: 25px;
+  background: #f7f9fb;
+}
+
+.page-wrapper header .buttons-section .active {
+  background: #f5e08b;
+}
+
+.page-wrapper header .buttons-section .not-active:hover {
+  background: #f5e08b;
+}
+
+.page-wrapper header .buttons-section button:nth-child(1) {
+  margin-right: 30px;
+}
+
+.page-wrapper .main-section h2 {
+  text-align: center;
+  margin-top: 20px;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=MyProfile.module.css.map */
