--- a/src/components/MyProfile/MyProfile.module.scss
+++ b/src/components/MyProfile/MyProfile.module.scss
@@ -11,22 +11,54 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-
+        border-bottom: 2px solid $accent-yellow-color-dark;
+        padding-bottom: 10px;
         .user-info-section {
             display: flex;
             align-items: center;
-
+            
             .img-wrapper {
+                margin-right: 10px;
                 border: 2px solid $accent-yellow-color-dark;
                 border-radius: 50%;
-                width: 94px;
-                height: 94px;
+                width: 77px;
+                height: 77px;
                 position: relative;
                 svg{
                     position: absolute;
-                    left: 10px;
+                    left: 9px;
                 }
             }    
+        }
+
+        .buttons-section {
+            button {
+                border: 2px solid $accent-yellow-color-dark;
+                padding: 10px 90px;
+                border-radius: 25px;
+                background: $base-color-light;
+            }
+
+            .active {
+                background: #f5e08b;
+            }
+
+            .not-active:hover {
+                    background: #f5e08b;
+            }
+
+            button:nth-child(1) {
+                margin-right: 30px;
+            }
+        }
+
+    }
+
+    .main-section {
+        h2{
+            text-align: center;
+            margin-top: 20px;
+            text-transform: uppercase;
         }
     }
 }
