--- a/src/shared/css/general.scss
+++ b/src/shared/css/general.scss
@@ -122,3 +122,36 @@ $post-body-font-size: 1.1rem;
         font-size: 1.3rem;
     }
 }
+
+@mixin editDeleteBtns {
+        position: relative;
+
+        .action-link {
+            margin: 0 10px;
+            border: 1px solid;
+            padding: 10px 20px;
+            border-radius: 8px;
+        }
+
+        .action-link:nth-child(1){
+            color: rgb(14, 138, 14);
+            transition: 0.3s;
+        }
+        
+        .action-link:nth-child(1):hover{
+            background: rgb(14, 138, 14);
+            color: #fff;
+        }
+
+        .action-link:nth-child(2){
+            color: rgb(236, 47, 47);
+            transition: 0.3s;
+        }
+        
+        .action-link:nth-child(2):hover{
+            background: rgb(236, 47, 47);
+            color: #fff;
+        }
+
+        
+}
