--- a/src/components/CreatePost/CreatePost.module.scss
+++ b/src/components/CreatePost/CreatePost.module.scss
@@ -2,10 +2,13 @@
 
 .form-wrapper {
     @include post-form;
+   
+    form {
+        position: relative;
+    }
 }
 
 .confirmation-msg{
-        background: $base-color-dark;
         font-size: $body-font-size-large;
         font-family: $body-font;
         color: $accent-blue-color;
@@ -13,6 +16,8 @@
         position: absolute;
         transition: opacity 0.6s;
         opacity: 1;
+        left: 0;
+        top: 0;
 }
 
 .hide-msg{
@@ -24,4 +29,6 @@
     position: absolute;
     transition: opacity 1s;
     opacity: 0;
+    left: 0;
+    top: 0;
 }
