--- a/src/components/MyProfile/MyProfile.module.css
+++ b/src/components/MyProfile/MyProfile.module.css
@@ -64,7 +64,7 @@
   margin-right: 30px;
 }
 
-.page-wrapper .main-section h2 {
+.page-wrapper .main-section .page-heading {
   text-align: center;
   margin-top: 20px;
   text-transform: uppercase;
