--- a/src/components/MyProfile/MyProfile.module.scss
+++ b/src/components/MyProfile/MyProfile.module.scss
@@ -55,7 +55,7 @@
     }
 
     .main-section {
-        h2{
+        .page-heading{
             text-align: center;
             margin-top: 20px;
             text-transform: uppercase;
