--- a/src/components/Blog/Blog.module.css
+++ b/src/components/Blog/Blog.module.css
@@ -15,6 +15,16 @@
   padding: 3%;
 }
 
+@media screen and (max-width: 1400px) {
+  .post-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: justify;
+  }
+}
+
 .post-section:nth-child(odd) {
   background: #EAF0FC;
 }
@@ -37,6 +47,15 @@
   background: #EAF0FC;
 }
 
+@media screen and (max-width: 1400px) {
+  .post-section:nth-child(even) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .img-wrapper {
   width: 40%;
 }
@@ -45,6 +64,20 @@
   width: 100%;
   border: 2px solid #e8ba02;
   border-radius: 6px;
+}
+
+@media screen and (max-width: 1400px) {
+  .img-wrapper {
+    width: 70%;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .img-wrapper {
+    width: 85%;
+    margin-bottom: 10px;
+  }
 }
 
 .content-section {
@@ -68,5 +101,18 @@
   border: 1px solid #F9C807;
   padding: 6px 10px;
   border-radius: 6px;
+}
+
+@media screen and (max-width: 1400px) {
+  .content-section {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .content-section {
+    width: 85%;
+    margin-bottom: 10px;
+  }
 }
 /*# sourceMappingURL=Blog.module.css.map */
