--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -2,4 +2,21 @@
 
 .form-wrapper {
     @include form-style;
+
+}
+
+div .form-wrapper {
+    @media screen and (max-width: 850px) {
+        padding: 7%;
+    }
+
+    @media screen and (max-width: 500px) {
+        padding: 4%;
+    }
+
+    @media screen and (max-width: 400px) {
+        form {
+            margin-top: 10%;
+        }
+    }
 }
