--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -6,7 +6,13 @@ nav {
     align-items: center;
     background: $base-color-light;
     padding: 20px 30px;
+
+    @media screen and (max-width: 700px){
+        flex-direction: column;
+    }
 }
+
+
 
 .nav-menu {
     @include menu-flex;
@@ -18,6 +24,11 @@ nav {
 
     a:hover {
         color: $accent-yellow-color-dark;       
+    }
+
+    @media screen and (max-width: 580px) {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
